public/less/typography.less
// main: styles.less
@import (reference) "variables.less";

body { font-family: 'Exo 2', sans-serif; }



/* No `:visited` state is required by default (browsers will use `a`) */
a {
    color: @lightBlue;
    text-decoration: none;

    .transition;

    &:hover,
    &:focus {
        color: @whiteBlue;
        text-decoration: underline;
    }
}

// Prevent text breakout
p a,
q {
  /* These are technically the same, but use both */
  overflow-wrap: break-word;
  word-wrap: break-word;

  -ms-word-break: break-all;
  /* This is the dangerous one in WebKit, as it breaks things wherever */
  word-break: break-all;
  /* Instead use this non-standard one: */
  word-break: break-word;

  /* Adds a hyphen where the word breaks, if supported (No Blink) */
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto; 
}

a strong {
    color: inherit;
}

#disqus_thread {
   color: green;
   a { color: #2ECEF1; }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-bottom: 0;
    font-weight: 600;
    letter-spacing: -.025rem;
    line-height: 1.25;
    text-rendering: optimizeLegibility;
    color: #313131;
    margin: 0;
}

h1 {font-size: 3.2rem;}
p.h1-sub-heading {
    margin-top: 0;
    font-size:2rem;
    font-weight:600;
}

h2 {font-size: 2.6rem;}

h3 {font-size: 2.2rem;}

h4,
h5,
h6 {font-size: 1.8rem;}

p {
    font-size: 1.5rem;
    line-height: 1.5;
    margin-bottom: 0;
    margin-top: 0;

    &.example {
        position: relative;

        &:after {
            display: block;
            content: '';
            position: absolute;
            bottom: -2px;
            left: 0;
            width: 100%;
            height: 2px;
            background-image: linear-gradient(to right,
            @lightBlue, transparent);
            opacity: .4;
        }
    }
}

h1 + p,
h2 + p,
h3 + p,
h4 + p { margin-top: .5em }

section.container {
    color: #616161;
    text-shadow: none;
}


.post-title {
    position: relative;
    font-size: 4.5rem;
}

/* Meta data line below post title */

.post-date {
    position: relative;
    display: block;
    font-size: 2rem;
    margin-top: 1rem;
    color: #9a9a9a;
}

/* Related posts */
.related {
  padding-top: 2rem;
  padding-bottom: 2rem;
  border-top: 1px solid #eee;
}
.related-posts {
  padding-left: 0;
  list-style: none;
}
.related-posts h3 {
  margin-top: 0;
}
.related-posts li small {
  font-size: 75%;
  color: #999;
}
.related-posts li a:hover {
  color: #268bd2;
  text-decoration: none;
}
.related-posts li a:hover small {
  color: inherit;
}

/* Lists */
ul, ol, dl {
  font-size:1.4rem;
}

ol {
    margin: 0 0 0 2%;
    padding: 0;
    list-style-type: none;
    
    li {
        position: relative;
        counter-increment: step-counter;
        margin-bottom: 2rem;
        margin-left: 4%;
    }
    
    li:before {
        display: inline-block;
        position: absolute;
        top: -.5rem;
        left: -4rem;
        margin-right: 5px;
        font-size: 2rem;
        width: 3rem;
        height: 3rem;
        background-color: @blue;
        color: white;
        text-shadow: none;
        font-weight: bold;
        padding: .2rem .1rem 0 0;
        text-align: center;
        border-radius: 50%;
        line-height: normal;
    }
    
    li:after {
        display: inline-block;
        position: absolute;
        top: -.5rem;
        left: -4rem;
        font-family: 'Exo 2', sans-serif;
        content: counter(step-counter);
    }
}

main {
  text-shadow: 1px 1px 4px @blackBlue;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
      color: #2ecef1;
  }
  p {
      color: #cbf6ff;
      font-size: 1.6rem;
    }
}

article.code,
article.post,
section {
    p { color: @whiteBlue; }
}

article ul,
section ul {
    font-size: 110%;
    list-style: none;
    padding: 0;
    margin: 3% 2%;

    li {
        margin-left: 2rem;
        position: relative;

        &:before {
            display: inline-block;
            position: absolute;
            top: .2rem;
            left: -2.5rem;
            height: 100%;
            font-family: 'FontAwesome';
            content:'\f192';
            opacity: .5;
            color: @blue;
            transition: all .4s ease-out;
        }
    }
}



dt {
    position: relative;
    cursor: pointer;
    margin-top: 1.5rem;
    margin-left: 2rem;
    font-size: 1.5rem;

    &:before {
        display: inline-block;
        position: absolute;
        top: 0;
        left: -2rem;
        font-family: 'FontAwesome';
        content:'\f078';
        opacity: .5;
        color: @blue;
        transform: rotate(0deg);
        transition: all .4s ease-out;
    }

    &.toggled {
        &:before {
            opacity: 1;
            transform: rotate(180deg);
        }

        &:hover {
            &:before { opacity: 1 }
        }
    }

    &:hover {
        &:before { opacity: .8 }
    }
}

dd {
    position: relative;
    top: 0;
    left: 4rem;
    color: #cbf6ff;
    font-size: 1.4rem;
    line-height: 1.5;
    background: linear-gradient(
        to right,
        #171d1f, transparent);
    padding: 1rem;
    margin: 0;
    width: calc(100% - 1rem);
    margin-top: .5rem!important;
    display: block;
    transition: left .4s ease-out;

    p {
        //margin-bottom: 1rem!important;
        color: #cbf6ff;
        font-size: 1.4rem;
    }

    &.toggled {
        left: 2rem;
    }
}

/*
 * Messages
 *
 * Show alert messages to users. You may add it to single elements like a `<p>`,
 * or to a parent if there are multiple elements to show.
 */

.message {
    position: relative;
    margin-bottom: 1rem;
    padding: 1rem;
    color: @lightBlue;
    background-color: @darkBlue;
    border-left: 3px solid @blue;
    border-radius: 0 1rem 1rem 0;

    /*&:after {
        display: block;
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width:4px;
        height: 100%;
        background-image: linear-gradient(to bottom, @blue, transparent);
    }*/
}


.blog-post {
    p,
    li { color: @baseBlue }
    
    a { color: @blueDarker }
    
    li { line-height: 1.5 }
    
    ul li:before { color: @blue; opacity: 1; }
    
    pre,
    code {
        color: #427690;
        background: #E4EEF1;
    }
    
    pre {
        box-shadow: none;
        border-radius: 0;
        border-left: 4px solid #2ECEF1;
    }
}

.blog-header {
    text-align: center;
    text-shadow:
        1px 1px 4px black,
        2px 2px 12px black;
    h1,
    .post-date { color: white }
    
    .post-date { opacity: .75 }
}


::selection {
    background: @blue; /* WebKit/Blink Browsers */
    color: white;
    text-shadow: none;
}
::-moz-selection {
    background: @blue; /* Gecko Browsers */
    color: white;
    text-shadow: none;
}

